--- a/README.adoc
+++ b/README.adoc
@@ -1,3 +1,4 @@
+....
                  ooooo     ooo ooooooooo.   ooooooo  ooooo
                  `888'     `8' `888   `Y88.  `8888    d8'
                   888       8   888   .d88'    Y888..8P
@@ -8,13 +9,14 @@
 
 
                     The Ultimate Packer for eXecutables
-   Copyright (c) 1996-2018 Markus Oberhumer, Laszlo Molnar & John Reiser
+   Copyright (c) 1996-2019 Markus Oberhumer, Laszlo Molnar & John Reiser
                            https://upx.github.io
+....
 
 
 
 UPX TEST SUITE
-==============
+--------------
 
 This repository contains the UPX test suite.
 
@@ -29,4 +31,4 @@ Markus
    <markus@oberhumer.com>
 
 
-# vim:set ts=4 sw=4 et:
+// vim:set ts=4 sw=4 et:
